--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "start": "webpack --watch --progress --config webpack.config.js"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.0",
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "source-map-loader": "^3.0.0"
   }
 }
