--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "webpack --watch --progress --config webpack.config.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
     "html-webpack-plugin": "^5.3.1",
