--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,5 +2,9 @@
   "manifest_version": 3,
   "name": "React Extension",
   "description": "test",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "React Chrome Extension"
+  }
 }
