--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
   },
