--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.145",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "source-map-loader": "^3.0.0"
+    "react-dom": "^17.0.2"
   }
 }
