--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
+    "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.3.1",
     "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
