--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "React Extension",
-  "description": "test",
+  "description": "React Chrome extension boilerplate",
   "version": "1.0.0",
   "icons": {
     "16": "mask-icon.png",
