--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Chrome Extension",
+  "name": "React-Chrome-Extension",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
@@ -24,10 +25,25 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.6",
     "@types/chrome": "^0.0.145",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.7"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage"
+        }
+      ]
+    ],
+    "plugins": [
+      ["@babel/transform-runtime"]
+    ]
   }
 }
