fixed name again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Chrome-Extension",
+  "name": "react-chrome-extension",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
